# icub-firmware-shared

./: CMakeLists.txt  icub_firmware_shared-config.cmake.in
can/: CMakeLists.txt
eth/: CMakeLists.txt  embObjLib.cmake
eth/embobj/core/exec/yarp/: EOYtheSystem.c
eth/embobj/plus/comm-v2/icub/: EoManagement.c  EoMotionControl.h
